fix(menu): add missing top and bottom spacing

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,5 +1,7 @@
 :host {
   --menu-divider-color: var(--leu-color-black-transp-20);
+  display: block;
+  padding: 0.5rem 0;
 }
 
 /*
